crash using generative modifiers on text object #39765

Closed
opened 2014-04-17 02:40:18 +02:00 by lower case · 8 comments

System Information
Win64 GTX550Ti

Blender Version
Broken: 2.70.a ea99efe
Worked: 2.70.a official

crash using generative modifiers on text object

Exact steps for others to reproduce the error
add a text object
add build modifier
press play

add a text object
try array / decimate / edge split modifiers

**System Information** Win64 GTX550Ti **Blender Version** Broken: 2.70.a ea99efe Worked: 2.70.a official **crash using generative modifiers on text object** **Exact steps for others to reproduce the error** add a text object add build modifier press play add a text object try array / decimate / edge split modifiers
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @lowercase

Added subscriber: @lowercase
Antonis Ryakiotakis was assigned by Campbell Barton 2014-04-17 05:35:47 +02:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Psy-fi: this is caused by missing DM material update, looks straightforward to fix.

Psy-fi: this is caused by missing DM material update, looks straightforward to fix.

This issue was referenced by blender/blender-addons-contrib@ddc88ea419

This issue was referenced by blender/blender-addons-contrib@ddc88ea419ef81d0a12900a71f183ac8298c3931

This issue was referenced by ddc88ea419

This issue was referenced by ddc88ea419ef81d0a12900a71f183ac8298c3931

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ddc88ea419.

Closed by commit ddc88ea419.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39765
No description provided.