Fix T39765 crash on text with generative modifiers.